--- a/package.json
+++ b/package.json
@@ -15,17 +15,27 @@
   },
   "author": "Sharon Rolel <sharonrolel@gmail.com>",
   "homepage": "https://github.com/mobxjs/react-mobx-boilerplate",
-  "dependencies": {    
-    "mobx": "4.3.1",
-    "mobx-react": "5.2.3",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "routes": "2.1.0"
+  "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.10.0",
+    "highcharts": "^8.0.3",
+    "highcharts-react-official": "^3.0.0",
+    "local-storage-fallback": "^4.1.1",
+    "mobx": "5.15.4",
+    "mobx-react": "6.1.8",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "routes": "2.1.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "@types/node": "10.5.1",
-    "@types/react": "16.4.6",
-    "@types/react-dom": "16.0.6",
+    "@types/node": "13.7.7",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
     "connect-history-api-fallback": "1.5.0",
     "mini-css-extract-plugin": "0.4.1",
     "opn": "5.3.0",
@@ -38,12 +48,11 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
-    "mobx-react-devtools": "5.0.1",
     "postcss": "6.0.23",
     "postcss-loader": "2.1.5",
     "style-loader": "0.21.0",
     "tslib": "1.9.3",
-    "typescript": "2.9.2",
+    "typescript": "3.8.3",
     "url-loader": "1.0.1",
     "webpack": "4.15.0",
     "webpack-cli": "3.0.8",
